--- a/src/features/pages/Product/components/RightProduct/ProductListPage/productlist.module.scss
+++ b/src/features/pages/Product/components/RightProduct/ProductListPage/productlist.module.scss
@@ -5,7 +5,7 @@
 }
 .item {
   width: calc(100% / 2);
-  @include md-tablet-desktop {
+  @include desktop {
     width: calc(100% / 3);
   }
   &_contain {
@@ -15,6 +15,11 @@
   &_image {
     height: 214px;
     margin-bottom: 16px;
+    transform: scale(1);
+    transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
+    &:hover {
+      transform: scale(1.1);
+    }
     & > img {
       border-radius: 6px;
       object-fit: contain;
