--- a/src/features/pages/Checkout/checkout.module.scss
+++ b/src/features/pages/Checkout/checkout.module.scss
@@ -2,6 +2,10 @@
 
 .main{
     padding: 20px 15px;
+    @include md-tablet-desktop {
+        width: 500px;
+        margin: 0 auto;
+    }
 }
 .heading{
     font-size: 24px;
