--- a/src/features/pages/Home/components/Product/HotSale/hotsale.module.scss
+++ b/src/features/pages/Home/components/Product/HotSale/hotsale.module.scss
@@ -45,9 +45,17 @@
   transition: all 0.3s;
   width: 100%;
   height: 234px;
-  // background-color: yellow;
+  transform: scale(1);
+  transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
+  &:hover {
+    transform: scale(1.1);
+  }
   & > img {
     border-radius: 6px;
+
+    @include tablet {
+      object-fit: contain;
+    }
   }
 }
 .sliderName {
@@ -110,10 +118,10 @@
 }
 .sliderPayment {
   width: 100%;
-    font-size: 13px;
-    font-weight: 400;
-    line-height: 1.31;
-    color: #555;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.31;
+  color: #555;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
