--- a/src/features/pages/Home/components/catelogy/catelogy.module.scss
+++ b/src/features/pages/Home/components/catelogy/catelogy.module.scss
@@ -5,8 +5,9 @@
   margin: 0 auto;
   background-color: white;
   margin-top: 20px;
-    border-radius: 10px;
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+  border-radius: 10px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 .catelogy {
   display: flex;
@@ -24,30 +25,28 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    @include mobile{
-    width: calc(100% / 3);
-
+    @include mobile {
+      width: calc(100% / 3);
     }
-    & > div:first-child {
-      // display: inline-flex;
-      // justify-content: center;
-      // align-items: center;
-      border-radius: 50%;
-      background-color: #f4f4f4;
-      width: 95px;
-      height: 95px;
-      margin-bottom: 10px;
-      & > img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    & a {
+      & > div:first-child {
+        border-radius: 50%;
+        background-color: #f4f4f4;
+        width: 95px;
+        height: 95px;
+        margin-bottom: 10px;
+        & > img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
-    }
-    & > div:last-child {
-      font-weight: 400;
-      line-height: 1.3;
-      color: black;
-      text-align: center;
+      & > div:last-child {
+        font-weight: 400;
+        line-height: 1.3;
+        color: black;
+        text-align: center;
+      }
     }
   }
 }
