--- a/src/features/pages/Product/components/RightProduct/SortProduct/sortproduct.module.scss
+++ b/src/features/pages/Product/components/RightProduct/SortProduct/sortproduct.module.scss
@@ -18,7 +18,7 @@
       color: #555;
       margin-right: 20px;
       display: none;
-      @include md-tablet-desktop {
+      @include desktop {
         display: block;
       }
     }
@@ -48,8 +48,14 @@
   }
   .sort_right {
     display: none;
-
+    @include tablet {
+      width: 70px;
+      height: 30px;
+      margin: auto 10px;
+    }
+    
     @include md-tablet-desktop {
+      min-width: 118px;
       display: block;
       border: solid 1px #ced4da;
       border-radius: 4px;
@@ -59,6 +65,5 @@
       background-color: #fff;
       cursor: pointer;
       white-space: nowrap;
-      min-width: 118px;
     }
   }
